# ecommerce

./: .env.example  README.md  conftest.py  pyproject.toml  pytest.ini
core/: models.py  serializers.py  tests.py  views.py
core/migrations/: 0001_initial.py
ecommerce/: settings.py  urls.py
